See if recommended fix for mdl js load prevents page jumping to top on load.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,6 +2,10 @@
 // Generals styles for material design light elements
 //
 
+.mdl-layout__container {
+  position: relative;
+}
+
 .mdl-card{
   width: 100%;
 }
